--- a/style/main.css
+++ b/style/main.css
@@ -1,13 +1,16 @@
 main {
     padding-top: 54px;
     padding-bottom: 100px;
-    padding-left: 32px;
+    padding-left: calc(240px + 32px);
     padding-right: 32px;
+   
 }
+
+
 
 @media screen and (max-width: 475px) {
     main {
-padding: 16px 0px 40px 0px;
+        padding: 16px 0px 40px 0px;
     }
 
     main h2 {
@@ -43,10 +46,21 @@ main h2 {
     padding: 1rem;
 }
 
+.dark .metric {
+    border: 1px solid var(--b-2);
+    background-color: var(--b-2);
+}
+
 .metric div{
     display: flex;
     gap: 8px;
     align-items: center;
+}
+
+.metric h1 {
+    color: var(--bc);
+    font-size: 20px;
+    line-height: 32px;
 }
 
 .metric div span {
@@ -54,6 +68,18 @@ main h2 {
     line-height: 24px;
     font-weight: 600;
     color: var(--neutral);
+}
+
+.metric div:first-child path {
+    stroke: var(--neutral);
+}
+
+.dark .metric div:first-child path {
+    stroke: var(--bc);
+}
+
+.dark div span {
+    color: var(--bc);
 }
 
 @media screen and (max-width: 475px) {
@@ -98,8 +124,13 @@ h3{
         border: 1px solid var(--b-3);
 }
 
-.bar-chart{
-    
+.dark .chart {
+    background-color: var(--b-2);
+    border: 1px solid var(--b-2);
+}
+
+#bar-chart{
+    height: 100%;
 }
 
 @media screen and (max-width: 475px) {
@@ -121,19 +152,24 @@ h3{
     position: absolute;
     left: 0;
     top: 0;
+    width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: 100% 100% 100%;
+    /* display: grid;
+    grid-template-columns: 100% 100% 100%; */
 }
 
 .carousel-item {
     display: flex;
+    position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
     padding: 1rem 1rem 3rem 1rem;
     gap: 0.5rem;
     min-height: 320px;
     font-size: 12px;
     color: white;
-    position: relative;
         line-height: 16px;
     flex-direction: column;
     justify-content: flex-end;
@@ -256,6 +292,11 @@ h3{
     border: 1px solid var(--b-3);
 }
 
+.dark .options-row .join {
+    background-color: var(--b-2);
+    border: 1px solid var(--b-2);
+}
+
 .options-row .join input {
     flex-grow: 1;
     border: none;
@@ -263,6 +304,10 @@ h3{
     background-color: transparent;
     font-size: 14px;
     line-height: 20px;
+}
+
+.dark .options-row .join input {
+    color: #fff;
 }
 
 .options-row .join input::placeholder {
@@ -288,6 +333,10 @@ h3{
     line-height: 20px;
 }
 
+.options-row .sort .menu {
+    padding: 8px;
+}
+
 .options-row .sort button {
     border: 1px solid var(--b-3);
     border-radius: 2px;
@@ -298,10 +347,19 @@ h3{
     align-items: center;
 }
 
+.dark .options-row .sort button {
+    border-color: var(--b-2);
+    background-color: var(--b-2);
+}
+
 .options-row .sort button svg {
     width: 20px;
     height: 20px;
     flex-shrink: 0;
+}
+
+ .options-row .sort path {
+    stroke: var(--bc);
 }
 
 .options-row .sort button span {
@@ -355,12 +413,29 @@ justify-content: flex-end;
     background-color: var(--accent);
 }
 
+.dark .table .head {
+background-color: #6A6676;
+}
+
 .table .head .th {
     padding: 16px;
     font-size: 12px;
     line-height: 16px;
     font-weight: 600;
     color: var(--neutral)
+}
+
+.dark .table .head .th {
+    cursor: pointer;
+    color: #fff;
+}
+
+.table .head .th:hover {
+    background-color: var(--neutral);
+}
+
+.dark .table .head .th:hover {
+    background-color: var(--accent);
 }
 
 .table .trow {
@@ -378,6 +453,10 @@ justify-content: flex-end;
         line-height: 16px;
         font-weight: 600;
         color: var(--bc)
+}
+
+.dark .table .trow .td {
+    background-color: var(--b-2);
 }
 
 .bubble {
