--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -2,7 +2,9 @@ nav {
     width: 100%;
     max-width: 240px;
     min-height: 100vh;
-    
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -158,6 +160,10 @@ nav.collapsed #collapse-btn svg {
         transform: scaleX(-1);
 }
 
+.dark nav #collapse-btn svg path {
+    stroke: #fff;
+}
+
 #nav-toggler{
     display: none;
 }
@@ -195,6 +201,10 @@ nav.collapsed #collapse-btn svg {
     color: #64748B;
 }
 
+.dark .profile-info span:last-child { 
+    color: #fff;
+}
+
 .theme-switcher {
     padding: 0 8px;
     display: flex;
@@ -223,12 +233,12 @@ nav.collapsed #collapse-btn svg {
     position: absolute;
     top: 50%;
     transform: translate(0%, -50%);
-    left: 4px;
+    left: 2px;
 }
 
 .dark .theme-switcher .theme-toggler .lever { 
     left: auto;
-    right: 4px;
+    right: 2px;
 }
 
 .tip{
